@@ -202,11 +202,11 @@ public class IchthyopView extends FrameView
     }
 
     @Action
-    public Task exportToKMZ() {
+    public Task<?, ?> exportToKMZ() {
         return kmzTask = new ExportToKMZTask(getApplication());
     }
 
-    private class ExportToKMZTask extends SFTask {
+    private class ExportToKMZTask extends SFTask<Object, Object> {
 
         ExportToKMZTask(Application instance) {
             super(instance);
@@ -260,11 +260,11 @@ public class IchthyopView extends FrameView
     }
 
     @Action
-    public Task createMaps() {
+    public Task<?, ?> createMaps() {
         return createMapTask = new CreateMapTask(getApplication());
     }
 
-    private class CreateMapTask extends SFTask<Object, Painter[]> {
+    private class CreateMapTask extends SFTask<Object, Painter<?>[]> {
 
         private int index;
 
@@ -307,8 +307,8 @@ public class IchthyopView extends FrameView
         }
 
         @Override
-        protected void process(List<Painter[]> painters) {
-            for (Painter[] painter : painters) {
+        protected void process(List<Painter<?>[]> painters) {
+            for (Painter<?>[] painter : painters) {
                 wmsMapper.map(painter[0], painter[1]);
                 wmsMapper.screen2File(index++);
             }
@@ -385,7 +385,7 @@ public class IchthyopView extends FrameView
         btnMapping.getAction().setEnabled(false);
         btnExportToKMZ.getAction().setEnabled(false);
         btnCloseNC.getAction().setEnabled(false);
-        cbBoxVariable.setModel(new DefaultComboBoxModel(new String[]{"None"}));
+        cbBoxVariable.setModel(new DefaultComboBoxModel<Object>(new String[]{"None"}));
         setColorbarPanelEnabled(false);
     }
 
@@ -402,7 +402,7 @@ public class IchthyopView extends FrameView
         btnExportToKMZ.getAction().setEnabled(true);
         setMainTitle();
         setColorbarPanelEnabled(true);
-        cbBoxVariable.setModel(new DefaultComboBoxModel(wmsMapper.getVariableList()));
+        cbBoxVariable.setModel(new DefaultComboBoxModel<Object>(wmsMapper.getVariableList()));
     }
 
     public void closeFolderAnimation() {
@@ -413,7 +413,7 @@ public class IchthyopView extends FrameView
     }
 
     @Action
-    public Task openFolderAnimation() {
+    public Task<?, ?> openFolderAnimation() {
 
         stopAnimation();
         File file = (null == outputFolder)
@@ -428,7 +428,7 @@ public class IchthyopView extends FrameView
         return null;
     }
 
-    private class OpenFolderAnimationTask extends SFTask {
+    private class OpenFolderAnimationTask extends SFTask<Object, Object> {
 
         private final File folder;
         int nbPNG = 0;
@@ -492,11 +492,11 @@ public class IchthyopView extends FrameView
     }
 
     @Action
-    public Task createAnimatedGif() {
+    public Task<?, ?> createAnimatedGif() {
         return new CreateAnimatedGifTask(getApplication());
     }
 
-    private class CreateAnimatedGifTask extends SFTask {
+    private class CreateAnimatedGifTask extends SFTask<Object, Object> {
 
         CreateAnimatedGifTask(Application instance) {
             super(instance);
@@ -575,7 +575,7 @@ public class IchthyopView extends FrameView
         ckBoxDrawGrid.setEnabled(false);
     }
 
-    private class SimulationPreviewTask extends SFTask {
+    private class SimulationPreviewTask extends SFTask<Object, Object> {
         
         private boolean setupSucceeded;
         private boolean initSucceeded;
@@ -619,7 +619,7 @@ public class IchthyopView extends FrameView
     }
 
     @Action
-    public Task saveAsConfigurationFile() {
+    public Task<?, ?> saveAsConfigurationFile() {
         JFileChooser fc = new JFileChooser(getSimulationManager().getConfigurationFile());
         fc.setDialogType(JFileChooser.SAVE_DIALOG);
         fc.setAcceptAllFileFilterUsed(false);
@@ -674,11 +674,11 @@ public class IchthyopView extends FrameView
     }
 
     @Action
-    public Task saveConfigurationFile() {
+    public Task<?, ?> saveConfigurationFile() {
         return new SaveCfgFileTask(getApplication());
     }
 
-    private class SaveCfgFileTask extends SFTask {
+    private class SaveCfgFileTask extends SFTask<Object, Object> {
 
         SaveCfgFileTask(Application instance) {
             super(instance);
@@ -752,7 +752,7 @@ public class IchthyopView extends FrameView
     }
 
     @Action
-    public Task openConfigurationFile() {
+    public Task<?, ?> openConfigurationFile() {
         JFileChooser chooser = new JFileChooser(cfgPath);
         chooser.setDialogType(JFileChooser.OPEN_DIALOG);
         chooser.setFileFilter(new FileNameExtensionFilter(getResourceMap().getString("Application.configurationFile"), getResourceMap().getString("Application.configurationFile.extension")));
@@ -835,7 +835,7 @@ public class IchthyopView extends FrameView
         }
     }
 
-    private class FailedTask extends SFTask {
+    private class FailedTask extends SFTask<Object, Object> {
 
         private final Exception exception;
 
@@ -864,7 +864,7 @@ public class IchthyopView extends FrameView
         return SimulationManager.getLogger();
     }
 
-    public Task loadConfigurationFile(File file, Version version) {
+    public Task<?, ?> loadConfigurationFile(File file, Version version) {
         try {
             getSimulationManager().setConfigurationFile(file);
         } catch (Exception e) {
@@ -1052,7 +1052,7 @@ public class IchthyopView extends FrameView
     }
 
     @Action
-    public Task simulationRun() {
+    public Task<?, ?> simulationRun() {
         if (!isRunning) {
             if (btnPreview.isSelected()) {
                 btnPreview.doClick();
@@ -1077,7 +1077,7 @@ public class IchthyopView extends FrameView
         openAnimationMenuItem.getAction().setEnabled(enabled);
     }
 
-    public class SimulationRunTask extends SFTask {
+    public class SimulationRunTask extends SFTask<Object, Object> {
 
         private boolean setupSucceeded;
         private boolean initSucceeded;
@@ -1152,7 +1152,7 @@ public class IchthyopView extends FrameView
         }
 
         @Override
-        protected void process(List values) {
+        protected void process(List<Object> values) {
             if (getSimulationManager().isStopped()) {
                 return;
             }
@@ -1433,7 +1433,7 @@ public class IchthyopView extends FrameView
     }
 
     @Action
-    public Task autoRangeColorbar() {
+    public Task<?, ?> autoRangeColorbar() {
         String varName = (String) cbBoxVariable.getSelectedItem();
         if (varName.startsWith("None")) {
             btnAutoRange.setEnabled(false);
@@ -1530,7 +1530,7 @@ public class IchthyopView extends FrameView
         btnCancelMapping = new javax.swing.JButton();
         btnOpenNC = new javax.swing.JButton();
         pnlWMS = new javax.swing.JPanel();
-        cbBoxWMS = new javax.swing.JComboBox();
+        cbBoxWMS = new javax.swing.JComboBox<Object>();
         lblWMS = new javax.swing.JLabel();
         lblNC = new javax.swing.JLabel();
         btnCloseNC = new javax.swing.JButton();
@@ -1538,7 +1538,7 @@ public class IchthyopView extends FrameView
         pnlColor = new javax.swing.JPanel();
         pnlColorBar = new javax.swing.JPanel();
         lblVariable = new javax.swing.JLabel();
-        cbBoxVariable = new javax.swing.JComboBox();
+        cbBoxVariable = new javax.swing.JComboBox<Object>();
         lblMin = new javax.swing.JLabel();
         lblMax = new javax.swing.JLabel();
         txtFieldMax = new javax.swing.JFormattedTextField();
@@ -1810,7 +1810,7 @@ public class IchthyopView extends FrameView
         pnlWMS.setName("pnlWMS"); // NOI18N
         pnlWMS.setOpaque(false);
 
-        cbBoxWMS.setModel(new javax.swing.DefaultComboBoxModel(new String[] { "Offline", "http://www.openstreetmap.org/", "http://www.marine-geo.org/services/wms?", "http://www2.demis.nl/wms/wms.asp?wms=WorldMap&" }));
+        cbBoxWMS.setModel(new javax.swing.DefaultComboBoxModel<Object>(new String[] { "Offline", "http://www.openstreetmap.org/", "http://www.marine-geo.org/services/wms?", "http://www2.demis.nl/wms/wms.asp?wms=WorldMap&" }));
         cbBoxWMS.setAction(actionMap.get("changeWMS")); // NOI18N
         cbBoxWMS.setName("cbBoxWMS"); // NOI18N
 
@@ -1857,7 +1857,7 @@ public class IchthyopView extends FrameView
         lblVariable.setText(resourceMap.getString("lblVariable.text")); // NOI18N
         lblVariable.setName("lblVariable"); // NOI18N
 
-        cbBoxVariable.setModel(new javax.swing.DefaultComboBoxModel(new String[] { "None" }));
+        cbBoxVariable.setModel(new javax.swing.DefaultComboBoxModel<Object>(new String[] { "None" }));
         cbBoxVariable.setAction(actionMap.get("changeColorbarVariable")); // NOI18N
         cbBoxVariable.setName("cbBoxVariable"); // NOI18N
 
@@ -1874,7 +1874,7 @@ public class IchthyopView extends FrameView
         NumberFormatter floatFormatter = new NumberFormatter(floatFormat);
         floatFormatter.setFormat(floatFormat);
         txtFieldMax.setFormatterFactory(new DefaultFormatterFactory(floatFormatter));
-        txtFieldMax.setValue(new Float(100.f));
+        txtFieldMax.setValue(Float.valueOf(100.f));
 
         btnAutoRange.setAction(actionMap.get("autoRangeColorbar")); // NOI18N
         btnAutoRange.setName("btnAutoRange"); // NOI18N
@@ -1905,7 +1905,7 @@ public class IchthyopView extends FrameView
         txtFieldMin.setFormatterFactory(new javax.swing.text.DefaultFormatterFactory(new javax.swing.text.NumberFormatter()));
         txtFieldMin.setName("txtFieldMin"); // NOI18N
         txtFieldMin.setFormatterFactory(new DefaultFormatterFactory(floatFormatter));
-        txtFieldMin.setValue(new Float(0.f));
+        txtFieldMin.setValue(Float.valueOf(0.f));
 
         lblMed.setText(resourceMap.getString("lblMed.text")); // NOI18N
         lblMed.setName("lblMed"); // NOI18N
@@ -1913,7 +1913,7 @@ public class IchthyopView extends FrameView
         txtFieldMed.setFormatterFactory(new javax.swing.text.DefaultFormatterFactory(new javax.swing.text.NumberFormatter()));
         txtFieldMed.setName("txtFieldMed"); // NOI18N
         txtFieldMed.setFormatterFactory(new DefaultFormatterFactory(floatFormatter));
-        txtFieldMed.setValue(new Float(50.f));
+        txtFieldMed.setValue(Float.valueOf(50.f));
 
         btnColorMed.setForeground(resourceMap.getColor("btnColorMed.foreground")); // NOI18N
         btnColorMed.setIcon(resourceMap.getIcon("btnColorMed.icon")); // NOI18N
@@ -2567,20 +2567,20 @@ public class IchthyopView extends FrameView
     }// </editor-fold>//GEN-END:initComponents
 
     private void lblFramePerSecondMouseClicked(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_lblFramePerSecondMouseClicked
-        // TODO add your handling code here:
+        
         if (evt.getClickCount() > 1) {
             animationSpeed.setValue(1.5f);
         }
 }//GEN-LAST:event_lblFramePerSecondMouseClicked
 
     private void animationSpeedStateChanged(javax.swing.event.ChangeEvent evt) {//GEN-FIRST:event_animationSpeedStateChanged
-        // TODO add your handling code here:
+        
         JSpinner source = (JSpinner) evt.getSource();
         nbfps = (Float) source.getValue();
 }//GEN-LAST:event_animationSpeedStateChanged
 
     private void sliderTimeStateChanged(javax.swing.event.ChangeEvent evt) {//GEN-FIRST:event_sliderTimeStateChanged
-        // TODO add your handling code here:
+        
         SwingUtilities.invokeLater(new Runnable() {
             @Override
             public void run() {
@@ -2591,17 +2591,17 @@ public class IchthyopView extends FrameView
     }//GEN-LAST:event_sliderTimeStateChanged
 
     private void hyperLinkLogoMouseEntered(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_hyperLinkLogoMouseEntered
-        // TODO add your handling code here:
+        
         pnlLogo.setAlpha(0.9f);
     }//GEN-LAST:event_hyperLinkLogoMouseEntered
 
     private void hyperLinkLogoMouseExited(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_hyperLinkLogoMouseExited
-        // TODO add your handling code here:
+        
         pnlLogo.setAlpha(0.4f);
     }//GEN-LAST:event_hyperLinkLogoMouseExited
 
     private void taskPaneConfigurationPropertyChange(java.beans.PropertyChangeEvent evt) {//GEN-FIRST:event_taskPaneConfigurationPropertyChange
-        // TODO add your handling code here:
+        
         if (evt.getPropertyName().equals("collapsed")) {
             if (!(Boolean) evt.getNewValue()) {
                 taskPaneSimulation.setCollapsed(true);
@@ -2623,7 +2623,7 @@ public class IchthyopView extends FrameView
     }//GEN-LAST:event_taskPaneConfigurationPropertyChange
 
     private void taskPaneSimulationPropertyChange(java.beans.PropertyChangeEvent evt) {//GEN-FIRST:event_taskPaneSimulationPropertyChange
-        // TODO add your handling code here:
+        
         if (evt.getPropertyName().equals("collapsed")) {
             if (!(Boolean) evt.getNewValue()) {
                 taskPaneConfiguration.setCollapsed(true);
@@ -2641,7 +2641,7 @@ public class IchthyopView extends FrameView
     }//GEN-LAST:event_taskPaneSimulationPropertyChange
 
     private void taskPaneMappingPropertyChange(java.beans.PropertyChangeEvent evt) {//GEN-FIRST:event_taskPaneMappingPropertyChange
-        // TODO add your handling code here:
+        
         if (evt.getPropertyName().equals("collapsed")) {
             if (!(Boolean) evt.getNewValue()) {
                 taskPaneSimulation.setCollapsed(true);
@@ -2658,7 +2658,7 @@ public class IchthyopView extends FrameView
     }//GEN-LAST:event_taskPaneMappingPropertyChange
 
     private void taskPaneAnimationPropertyChange(java.beans.PropertyChangeEvent evt) {//GEN-FIRST:event_taskPaneAnimationPropertyChange
-        // TODO add your handling code here:
+        
         if (evt.getPropertyName().equals("collapsed")) {
             if (!(Boolean) evt.getNewValue()) {
                 taskPaneSimulation.setCollapsed(true);
@@ -2674,7 +2674,7 @@ public class IchthyopView extends FrameView
     }//GEN-LAST:event_taskPaneAnimationPropertyChange
 
     private void btnColorMinActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_btnColorMinActionPerformed
-        // TODO add your handling code here:
+        
         final JButton btn = (JButton) evt.getSource();
         SwingUtilities.invokeLater(new Runnable() {
             @Override
@@ -2685,7 +2685,7 @@ public class IchthyopView extends FrameView
     }//GEN-LAST:event_btnColorMinActionPerformed
 
     private void btnColorMaxActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_btnColorMaxActionPerformed
-        // TODO add your handling code here:
+        
         final JButton btn = (JButton) evt.getSource();
         SwingUtilities.invokeLater(new Runnable() {
             @Override
@@ -2696,7 +2696,7 @@ public class IchthyopView extends FrameView
     }//GEN-LAST:event_btnColorMaxActionPerformed
 
     private void btnParticleColorActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_btnParticleColorActionPerformed
-        // TODO add your handling code here:
+        
         final JButton btn = (JButton) evt.getSource();
         SwingUtilities.invokeLater(new Runnable() {
             @Override
@@ -2710,7 +2710,7 @@ public class IchthyopView extends FrameView
     }//GEN-LAST:event_btnParticleColorActionPerformed
 
     private void btnColorMedActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_btnColorMedActionPerformed
-        // TODO add your handling code here:
+        
         final JButton btn = (JButton) evt.getSource();
         SwingUtilities.invokeLater(new Runnable() {
             @Override
@@ -2721,7 +2721,7 @@ public class IchthyopView extends FrameView
     }//GEN-LAST:event_btnColorMedActionPerformed
 
     private void spinnerParticleSizeStateChanged(javax.swing.event.ChangeEvent evt) {//GEN-FIRST:event_spinnerParticleSizeStateChanged
-        // TODO add your handling code here:
+        
         JSpinner source = (JSpinner) evt.getSource();
         final int pixel = (Integer) source.getValue();
         SwingUtilities.invokeLater(new Runnable() {
@@ -2734,7 +2734,7 @@ public class IchthyopView extends FrameView
     }//GEN-LAST:event_spinnerParticleSizeStateChanged
 
     private void ckBoxDrawGridActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_ckBoxDrawGridActionPerformed
-        // TODO add your handling code here:
+        
         getSimulationUI().setGridVisible(ckBoxDrawGrid.isSelected());
     }//GEN-LAST:event_ckBoxDrawGridActionPerformed
     // Variables declaration - do not modify//GEN-BEGIN:variables
@@ -2771,8 +2771,8 @@ public class IchthyopView extends FrameView
     private javax.swing.JButton btnSaveCfgFile;
     private javax.swing.JButton btnSimulationRun;
     private javax.swing.JMenuItem cancelMapMenuItem;
-    private javax.swing.JComboBox cbBoxVariable;
-    private javax.swing.JComboBox cbBoxWMS;
+    private javax.swing.JComboBox<Object> cbBoxVariable;
+    private javax.swing.JComboBox<Object> cbBoxWMS;
     private javax.swing.JCheckBox ckBoxDrawGrid;
     private javax.swing.JCheckBox ckBoxReverseTime;
     private javax.swing.JMenuItem closeMenuItem;
@@ -2848,9 +2848,9 @@ public class IchthyopView extends FrameView
     private JDialog aboutBox;
     private File cfgPath = new File(System.getProperty("user.dir"));
     private boolean isRunning = false;
-    private Task simulActionTask;
-    private Task createMapTask;
-    private Task kmzTask;
+    private Task<?, ?> simulActionTask;
+    private Task<?, ?> createMapTask;
+    private Task<?, ?> kmzTask;
     private boolean initDone;
     private final ReplayPanel replayPanel = new ReplayPanel();
     private final float TEN_MINUTES = 10.f * 60.f;
